--- a/cvpr.sty
+++ b/cvpr.sty
@@ -503,9 +503,9 @@
           \@author
         }{
           \iftoggle{cvprrebuttal}{}{
-            Anonymous \confName~submission\\
+            \confName~Final Report Submission\\
             \vspace*{1pt}\\
-            Paper ID \cvprPaperID
+             \cvprPaperID
           }
         }
       \end{tabular}
