--- a/egbib.bib
+++ b/egbib.bib
@@ -59,7 +59,7 @@
 
 
 @misc{Authors14,
- author = {FirstName LastName},
+ author = {hhhhh},
  title = {The frobnicatable foo filter},
  note = {Face and Gesture submission ID 324. Supplied as supplemental material {\tt fg324.pdf}},
  year = 2014
@@ -72,40 +72,57 @@
  year = 2014
 }
 
+@article{Alpher01,
+author = {Min Zhou, Taiyong Li},
+title = {ECG Classification Using Wavelet Packet Entropy and Random
+Forests
+},
+journal = {Entropy},
+volume = {18},
+number = {285},
+year = 2006
+}
+
 @article{Alpher02,
-author = {FirstName Alpher},
-title = {Frobnication},
-journal = PAMI,
-volume = 12,
-number = 1,
-pages = {234--778},
-year = 2002
+author = {V.K.Srivastav, Dr. Devendra Prasad},
+title = {DWT - Based Feature Extraction from ECG
+Signal
+},
+journal = {American Journal of Engineering Research (AJER)},
+volume = 2,
+issue = 3,
+pages = {44--50},
+year = 2013
 }
 
 @article{Alpher03,
-author = {FirstName Alpher and  FirstName Fotheringham-Smythe},
-title = {Frobnication revisited},
-journal = {Journal of Foo},
-volume = 13,
+author = {Siti Agrippina Alodia Yusuf, Risanuri Hidayat},
+title = {Feature Extraction of ECG Signals using
+Discrete Wavelet Transform and MFCC
+},
+journal = {IEEE ICSITECH},
+volume = 12,
 number = 1,
-pages = {234--778},
-year = 2003
+pages={167-170},
+year={2019}
 }
 
 @article{Alpher04,
-author = {FirstName Alpher and FirstName Fotheringham-Smythe and FirstName Gamow},
-title = {Can a machine frobnicate?},
-journal = {Journal of Foo},
-volume = 14,
-number = 1,
-pages = {234--778},
-year = 2004
+author = {M. Sasireka, A. Senthilkumar},
+title = {DWT based feature extraction from ECG signal and
+detection of cardiac diseases
+},
+journal = {IJAER},
+issue = 1,
+year={2015}
 }
 
 @inproceedings{Alpher05,
-author = {FirstName Alpher and FirstName Gamow},
-title = {Can a computer frobnicate?},
-booktitle = CVPR,
-pages = {234--778},
-year = 2005
+author = {Waqas Ahmed, Shehzad Khalid},
+title = {ECG signal processing for recognition of
+cardiovascular diseases: A survey
+},
+year={2016},
+pages={677-682},
+journal = {IEEE INTECH}
 }
